@@ -24,7 +24,7 @@ my @tests =
             HTTP_REFERER       => 'http://example.com/awesome.html',
             HTTP_CONNECTION    => 'close',
             HTTP_USER_AGENT    => 'Mozilla/Inf',
-            'p6w.input'        => "a=1&b=2&c=3\r\n",
+            'wapi.input'       => "a=1&b=2&c=3\r\n",
         },),
     },
     {
@@ -38,7 +38,7 @@ my @tests =
             HTTP_AUTHORIZATION => 'Basic QWxhZGRpbjpvcGVuIHNlc2FtZQ==',
             HTTP_REFERER       => 'http://example.com/awesome.html',
             HTTP_USER_AGENT    => 'Mozilla/Inf',
-            'p6w.input'        => "a=1&b=2&c=3\r\n",
+            'wapi.input'       => "a=1&b=2&c=3\r\n",
         },),
     },
     {
@@ -53,7 +53,7 @@ my @tests =
             HTTP_REFERER       => 'http://example.com/awesome.html',
             HTTP_USER_AGENT    => 'Mozilla/Inf',
             HTTP_CONNECTION    => 'Keep-Alive',
-            'p6w.input'        => "a=1&b=2&c=3\r\n",
+            'wapi.input'       => "a=1&b=2&c=3\r\n",
         },),
     },
     {
@@ -69,7 +69,7 @@ my @tests =
             HTTP_REFERER       => 'http://example.com/awesome.html',
             HTTP_CONNECTION    => 'keep-alive',
             HTTP_USER_AGENT    => 'Mozilla/Inf',
-            'p6w.input'        => "a=1&b=2&c=3\r\n\r\n",
+            'wapi.input'       => "a=1&b=2&c=3\r\n\r\n",
         }, {
            REQUEST_METHOD     => 'GET',
            REQUEST_URI        => 'http://example.com/image.png',
@@ -81,7 +81,7 @@ my @tests =
            HTTP_REFERER       => 'http://example.com/index.html',
            HTTP_USER_AGENT    => 'Mozilla/Inf',
            HTTP_CONNECTION    => 'keep-alive',
-           'p6w.input'        => '',
+           'wapi.input'       => '',
        }, {
            REQUEST_METHOD     => 'GET',
            REQUEST_URI        => 'http://example.com/main.css',
@@ -91,7 +91,7 @@ my @tests =
            HTTP_ACCEPT        => 'text/css',
            HTTP_USER_AGENT    => 'Mozilla/Inf',
            HTTP_REFERER       => 'http://example.com/index.html',
-           'p6w.input'        => '',
+           'wapi.input'       => '',
         }),
     },
 ;
