@@ -20,7 +20,7 @@ my @tests =
             HTTP_REFERER       => 'http://example.com/awesome.html',
             HTTP_CONNECTION    => 'close',
             HTTP_USER_AGENT    => 'Mozilla/Inf',
-            'p6w.input'        => "a=1&b=2&c=3\r\n",
+            'wapi.input'       => "a=1&b=2&c=3\r\n",
         },),
     },
     {
@@ -36,7 +36,7 @@ my @tests =
             HTTP_REFERER       => 'http://example.com/awesome.html',
             HTTP_CONNECTION    => 'close',
             HTTP_USER_AGENT    => 'Mozilla/Inf',
-            'p6w.input'        => "a=1&b=2&c=\r\n",
+            'wapi.input'       => "a=1&b=2&c=\r\n",
         },),
     },
     {
@@ -51,7 +51,7 @@ my @tests =
             HTTP_AUTHORIZATION => 'Basic QWxhZGRpbjpvcGVuIHNlc2FtZQ==',
             HTTP_REFERER       => 'http://example.com/awesome.html',
             HTTP_USER_AGENT    => 'Mozilla/Inf',
-            'p6w.input'        => "a=1&b=2&c=3\r\n\r\n",
+            'wapi.input'       => "a=1&b=2&c=3\r\n\r\n",
        }, {
            REQUEST_METHOD     => 'GET',
            REQUEST_URI        => 'http://example.com/image.png',
@@ -62,7 +62,7 @@ my @tests =
            HTTP_TE            => 'chunked',
            HTTP_REFERER       => 'http://example.com/index.html',
            HTTP_USER_AGENT    => 'Mozilla/Inf',
-           'p6w.input'        => '',
+           'wapi.input'       => '',
        }, {
            REQUEST_METHOD     => 'POST',
            REQUEST_URI        => 'http://example.com/form.html',
@@ -73,7 +73,7 @@ my @tests =
            HTTP_USER_AGENT    => 'Mozilla/Inf',
            HTTP_REFERER       => 'http://example.com/index.html',
            HTTP_TRAILER       => 'Magic',
-           'p6w.input'        => '{}{"a":1,"b":2,"c",3}',
+           'wapi.input'       => '{}{"a":1,"b":2,"c",3}',
            'test.trailers'    => [
                'magic' => 'on',
             ],
@@ -86,7 +86,7 @@ my @tests =
            HTTP_ACCEPT        => 'text/css',
            HTTP_USER_AGENT    => 'Mozilla/Inf',
            HTTP_REFERER       => 'http://example.com/index.html',
-           'p6w.input'        => '',
+           'wapi.input'       => '',
         }),
     },
     ;
